tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__Tier4Runes-AAAAAAAAAAAAAAAAAAACxg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 710,
  "prerequisites": [
    708
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Runes of Superior Capacity increase the Altar's size by 14% multiplicatively.\n\nRunes of the Orb increase the soul network size by 4% each. You'll need them later on.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tier 4 Runes",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    708
  ],
  "rewards": [],
  "tasks": []
}
