tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PayingtheHighest-AAAAAAAAAAAAAAAAAAAAHA==__WellofSuffering-AAAAAAAAAAAAAAAAAAAJlg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2454,
  "prerequisites": [
    712
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Well of Suffering damages mobs in a 6 block radius and feeds blood gained from them into an altar that is also within 6 blocks. Each mob costs 2 LP to damage, but give 10LP back. You can use Runes of Sacrifice to increase this. Very useful for automation!\n\n[note]Instead of feeding it live mobs, you can also use the Extreme Entity Crusher (EEC) set to ritual mode for the same effect![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Well of Suffering",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    712
  ],
  "rewards": [],
  "tasks": []
}
